# ascii-art-converter

./: CMakeLists.txt  README.md
.cache/clangd/index/: main.cpp.C455014E5D2B641F.idx  stb_image.cpp.D124645F9633D573.idx  stb_image.h.C0D8CD76E4DA9D81.idx  stb_image_resize.cpp.272FB4B58947F5D2.idx  stb_image_resize.h.5D0A1BBABAD06B81.idx
src/: main.cpp
